Fix styling on mobile for progress text

--- a/wp-content/themes/fundawande/css/theme/areas/_single-lesson.scss
+++ b/wp-content/themes/fundawande/css/theme/areas/_single-lesson.scss
@@ -268,6 +268,8 @@
                     }
                     .lesson-progress-text {
                         line-height: 1;
+                        font-size: 14px;
+                        width: 80%;
                     }
                     &.disabled {
                         svg {
